=== 1.9.13 ===
2007-02-01  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py:

	Release 1.9.13
	
2007-02-01  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py (pkgs): Use pkg-config instead of importing gtk
	which requires a display.

	* MANIFEST.in: Always include _kiwi.c

2007-01-31  Ronaldo Maia <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/icon.py: Fix workaround for recompute and call it after
	showing an icon on a widget.

=== 1.9.12 ===
2007-01-29  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile:
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	* po/fr.po:
	* po/kiwi.pot:
	* po/pt_BR.po:
	* po/sv.po:

	1.9.12

2007-01-19  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (_ComboEntryPopup.set_selected_iter): 
	Try setting the full model if everything else fails.
	Based on patch by Goedson Teixeira Paixao

	Fixes #3099.

2006-11-11  Marco Antonio Porcho Souza  <maporcho@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_BaseDateTimeConverter._convert_format): 
	Use YYYY/mm/dd instead %Y/%m/%d in error messages.

	Fixes #3041.

2007-01-16  Johan Dahlin  <jdahlin@async.com.br>

	* po/fr.po: Added French translation contributed by Benoit Myard.

2006-12-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/log.py (ReversedGlobalFilter.filter): Use >= instead of >

	* tests/test_log.py (LogTest.testStdErr): Add tests warnings
	printed on the console and to a log file.

	Fixes #2984

2006-12-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.set_visible_rows): Impl.

2006-11-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (listpackages): Provide better error messages.

2006-11-11  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/hyperlink.py: Make sure the hyperlink stays within