@@ -16,3 +16,4 @@ include README
 include tools/epyrun
 include NEWS
 include kiwi/_kiwi.c
+include kiwi.spec
