@@ -1,3 +1,10 @@
+2007-02-04  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi.spec (Requires): 
+	* Makefile: 
+	* MANIFEST.in: 
+	Add rpm spec file.
+
 === 1.9.13 ===
 2007-02-01  Johan Dahlin  <jdahlin@async.com.br>
 
